Fix under footer white space issue

--- a/content/themes/enhancv/assets/css/bastard.css
+++ b/content/themes/enhancv/assets/css/bastard.css
@@ -8527,3 +8527,7 @@ body:before {
 .author-profile .social {
   text-align: center;
   margin-top: 30px; }
+
+.author-template {
+  height: auto;
+  max-height: auto; }
