--- a/content/themes/enhancv/assets/sass/partials/_author.scss
+++ b/content/themes/enhancv/assets/sass/partials/_author.scss
@@ -43,3 +43,8 @@
 		margin-top: 30px;
 	}
 }
+
+.author-template {
+	height: auto;
+	max-height: auto;
+}
